[package]
name = "mdbx-tui"
version = "0.1.0"
authors = ["Artem Vorotnikov <artem@vorotnikov.me>"]
edition = "2021"
description = "TUI for MDBX storage engine"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
cursive = { version = "0.20", default-features = false, features = [
    "termion-backend",
] }
expanded-pathbuf = "0.1"
hex = "0.4"
libmdbx = "0.3"
once_cell = "1"
termion = "2"
